--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   font-family: "Gilroy";
   src: local("../fonts/gilroyextrabold.woff2"),
   local("../fonts/gilroyextrabold.woff2"),
-  url("/../fonts/gilroyextrabold.woff2") format("woff2"),
+  url("../fonts/gilroyextrabold.woff2") format("woff2"),
   url("../fonts/gilroyextrabold.woff") format("woff");
   font-weight: 900;
   font-style: normal;
@@ -26,7 +26,7 @@
   font-family: "Gilroy";
   src: local("../fonts/gilroyLight.woff2"),
   local("../fonts/gilroyex.woff2"),
-  url("/../fonts/gilroyLight.woff2") format("woff2"),
+  url("../fonts/gilroyLight.woff2") format("woff2"),
   url("../fonts/gilroyLight.woff") format("woff");
   font-weight: normal;
   font-style: normal;
@@ -36,7 +36,7 @@
   font-family: "Open Sans";
   src: local("../fonts/opensans.woff2"),
   local("../fonts/opensans.woff2"),
-  url("/../fonts/opensans.woff2") format("woff2"),
+  url("../fonts/opensans.woff2") format("woff2"),
   url("../fonts/opensans.woff") format("woff");
   font-weight: normal;
   font-style: normal;
@@ -46,7 +46,7 @@
   font-family: "Open Sans";
   src: local("../fonts/opensanslight.woff2"),
   local("../fonts/opensanslight.woff2"),
-  url("/../fonts/opensanslight.woff2") format("woff2"),
+  url("../fonts/opensanslight.woff2") format("woff2"),
   url("../fonts/opensanslight.woff") format("woff");
   font-weight: 100;
   font-style: normal;
