--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ img {
   line-height: 41px;
 }
 
-.characteristics__column--description
+.characteristics__column--description,
 .product-card__comparison {
   font-size: 13px;
   font-weight: 300;
