--- a/css/style.css
+++ b/css/style.css
@@ -609,21 +609,12 @@ img {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 40px;
 }
-
-.img-1:hover {
-  background-image: url("../img/brand_dji.png");
+.popular-product__img {
+  opacity: 0.1;
 }
 
-.img-2:hover {
-  background-image: url("../img/brand_sp_gadgets.png");
-}
-
-.img-3:hover {
-  background-image: url("../img/brand_go_pro.png");
-}
-
-.img-4:hover {
-  background-image: url("../img/brand_vive.png");
+.popular-product__img:hover {
+  opacity: 1;
 }
 
 .info-block {
