--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ img {
   position: relative;
   display: block;
   width: 220px;
-  margin: 9px 43px;
+  margin: 0;
   padding: 8px 0;
   overflow: hidden;
   transition: 1s all ease;
@@ -287,13 +287,80 @@ img {
   height: 100%;
 }
 
+/*Слайдер*/
+
+.slider {
+  position: relative;
+}
+
+.slide__controls {
+  position: absolute;
+  right: 101px;
+  bottom: 157px;
+  z-index: 20;
+  display: flex;
+  width: 72px;
+  justify-content: space-between;
+}
+
+.slide__controls-btn {
+  position: relative;
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 50%;
+  background-color: var(--basic-white);
+  cursor: pointer;
+}
+
+.slide__controls-btn:hover {
+
+  transform: scale(1.1);
+}
+
+.slide__controls_active:before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 6px;
+  height: 6px;
+  padding: 0;
+  background-color: var(--basic-white);
+  border: 1px solid var(--basic-black);
+  border-radius: 50%;
+}
+
+.slide__controls_active {
+
+}
+
+.slide__description {
+  padding: 0;
+  margin: 0 0 60px 0;
+}
+
 .characteristics {
   font-weight: normal;
+  margin-top: 60px;
 }
 
 .characteristics__column {
+  text-transform: lowercase;
+  padding-right: 60px;
   font-size: 36px;
   line-height: 41px;
+}
+
+.characteristics__column:last-child {
+  text-transform: capitalize;
+  padding-right: 0;
+}
+
+.characteristics__column--description {
+  padding-top: 15px;
 }
 
 .characteristics__column--description,
