--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   --basic-black: #000000;
   --basic-black-06: rgba(0, 0, 0, 0.6);
   --basic-black-03: rgba(0, 0, 0, 0.3);
+  --basic-black-025: rgba(0, 0, 0, 0.25);
   --basic-black-01: rgba(0, 0, 0, 0.1);
   --basic-dark: #363636;
   --basic-white: #FFFFFF;
@@ -10,11 +11,13 @@
   --basic-white-03: rgba(255, 255, 255, 0.3);
   --basic-grey: #464646;
   --basic-grey-shadow: #DCDCDC;
+  --basic-grey-hover: #D9D9D9;
+  --basic-grey-disable: #A6A6A6;
   --basic-half-grey: #7E7E7E;
   --basic-grey-light: #E5E5E5;
   --special-yellow: #F7E296;
   --special-yellow-dark: #F0C52E;
-  --special-yellow-light: #7e296;
+  --special-yellow-light: #7E296;
   --special-green: #91C92F;
   --special-grey: #f6dada;
 }
@@ -80,6 +83,7 @@
 a {
   text-decoration: none;
   color: var(--basic-black);
+  display: inline-block;
 }
 
 img {
@@ -643,7 +647,14 @@ img {
 
 .nav-menu__item:first-child:hover .catalog-menu__submenu {
   visibility: visible;
-  position: relative;
+  /*хз как сделать не могу додуматься*/
+  /*content: "";*/
+  /*position: absolute;*/
+  /*top: 20px;*/
+  /*left: -60px;*/
+  /*width: 1160px;*/
+  /*height: 146px;*/
+  /*background-color: var(--special-yellow);*/
 }
 
 .nav-menu__item:first-child:hover .slider {
@@ -655,8 +666,7 @@ img {
 }
 
 .breadcrumbs__link,
-.filter__item--inactive,
-.link__number {
+.filter__item--inactive {
   opacity: 0.3;
 }
 
@@ -698,11 +708,6 @@ img {
 .tel-number,
 .nav-menu__link--low {
   color: var(--basic-white);
-}
-
-.link__number--active {
-  color: var(--basic-black);
-  opacity: 1;
 }
 
 .catalog {
@@ -1157,6 +1162,82 @@ img {
   margin-left: 60px;
 }
 
+.filter__item {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+  padding-left: 43px;
+  margin-bottom: 20px;
+  padding-top: 5px;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--basic-black);
+}
+
+.filter-input-checkbox + label:hover::before {
+  border: 2px solid var(--basic-black-06);
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icon/icon_check.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-checkbox:disabled +label,
+.filter-input-radio:disabled +label {
+  color: var(--basic-grey-disable);
+}
+.filter-input-checkbox:disabled + label::before,
+.filter-input-radio:disabled +label::before {
+  border: 2px solid var(--basic-black-025);
+}
+
+.filter-input-radio + label::before,
+.filter-input-radio:checked + label::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.filter-input-radio + label::before {
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--basic-black);
+}
+
+.filter-input-radio:checked + label::after {
+  top: 9px;
+  left: 9px;
+  width: 10px;
+  height: 10px;
+  background-color: var(--basic-black);
+}
+
+.filter-input-radio + label:hover::before {
+  border: 2px solid var(--basic-black-06);
+}
+
+.filter-input-radio + label:hover::after {
+  background-color: var(--basic-black-06);
+}
+
 .catalog__wrapper {
   margin-left: 72px;
 }
@@ -1183,10 +1264,47 @@ img {
 
 .pagination {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 2fr;
-  margin-bottom: 80px;
+  grid-template-columns: 4fr 1fr 1fr 1fr 4fr;
+}
+
+.pagination__link {
+  color: var(--basic-black);
 }
 
 .pagination__item:last-child {
   justify-self: end;
+}
+
+.link__number {
+  color: var(--basic-black-03);
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.link__number:hover {
+  color: var(--basic-black-06);
+}
+
+.link__number:active {
+  color: var(--basic-black);
+}
+
+.link__number--active {
+  color: var(--basic-black);
+  cursor: pointer;
+}
+
+.link__back,
+.link__next {
+  padding: 25px 30px 25px 30px;
+}
+
+.link__back:hover,
+.link__next:hover {
+  background-color: var(--basic-grey-hover);
+}
+
+.link__back:active,
+.link__next:active {
+  color: var(--basic-black-03);
 }
